# Nek5000

./: .gitignore
core/: makefile.template  makenek.inc  mktar
core/benchmark/: Makefile.am  Makefile.problem
core/benchmark/eddy_uv/: Makefile.am
core/benchmark/pipe/: Makefile.am  reference.out
core/benchmark/pipe_con/: Makefile.am  reference.out
core/benchmark/turbChannel/: Makefile.am
core/benchmark/vortex/: Makefile.am
